objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Opportunity_Team__c</fullName>
        <label>Opportunity Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>CMT/PS</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>EMEA Central</fullName>
                </value>
                <value>
                    <fullName>EMEA South</fullName>
                </value>
                <value>
                    <fullName>EMEA UK &amp; North</fullName>
                </value>
                <value>
                    <fullName>Essentials</fullName>
                </value>
                <value>
                    <fullName>FINS</fullName>
                </value>
                <value>
                    <fullName>Fed/SLED</fullName>
                </value>
                <value>
                    <fullName>HLS</fullName>
                </value>
                <value>
                    <fullName>High Tech</fullName>
                </value>
                <value>
                    <fullName>High Tech Strat</fullName>
                </value>
                <value>
                    <fullName>MERT</fullName>
                </value>
                <value>
                    <fullName>SAP Testing</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <isActive>false</isActive>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>Select</fullName>
                    <isActive>false</isActive>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>Summit</fullName>
                    <isActive>false</isActive>
                    <label>Summit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Org_Id__c</fullName>
        <label>Org Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Source_Data_1__c</fullName>
        <description>This field is created as part of Qentinel data Migration</description>
        <label>Original Source Data 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Source_Data_2__c</fullName>
        <description>This field is created as part of Qentinal Data Migration</description>
        <label>Original Source Data 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Competitor__c</fullName>
        <description>If you selected Other in the Primary or Secondary Competitor please put the competitor we are facing into this field</description>
        <inlineHelpText>If you selected Other in the Primary or Secondary Competitor please put the competitor we are facing into this field</inlineHelpText>
        <label>Other Competitor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outclause_Date__c</fullName>
        <label>Outclause Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PAM_Credit__c</fullName>
        <formula>Partner_Account__r.Partner_Lead__r.FirstName &amp; &quot; &quot; &amp; Partner_Account__r.Partner_Lead__r.LastName</formula>
        <inlineHelpText>Partner Account Manager / Partner Lead</inlineHelpText>
        <label>PAM Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_Proposed_Date__c</fullName>
        <label>PA Proposed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PA_Proposed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PA Proposed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PNR__c</fullName>
        <formula>ACV__c  * 0.13</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ACV x 13%</inlineHelpText>
        <label>PNR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>POC_GUide_Sent__c</fullName>
        <formula>IF( 

POC_Guide_Sent_counter__c &gt;= 1, 

True, 

False 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POC Guide Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POC_Guide_Last_View_Date_Time__c</fullName>
        <label>POC Guide Last View Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>POC_Guide_Sent_counter__c</fullName>
        <label>POC Guide Sent (counter)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POC_Guide_Views__c</fullName>
        <label>POC Guide Views</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POC_Guide_Week_1_Sent__c</fullName>
        <formula>IF(

POC_Guide_Week_1_Sent_counter__c  &gt;= 1,

True,

False

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POC Guide Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POC_Guide_Week_1_Sent_counter__c</fullName>
        <inlineHelpText>used for rollup helper</inlineHelpText>
        <label>POC Guide Sent (counter)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Received__c</fullName>
        <description>Indicates that a PO has been received by RevOps</description>
        <label>PO Received</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Required__c</fullName>
        <formula>TEXT(Account.PO_Required__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_CPQ_Discount_Matrix_Required_c__c</fullName>
        <formula>IF(Account.PS_CPQ_Discount_Matrix_Required__c =TRUE,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates that  Account is obligated to have Discount Matrix-based pricing</inlineHelpText>
        <label>Discount Matrix Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_CPQ_Pricing_Group__c</fullName>
        <description>The Pricing Group for this Opportunity and all Quotes created for it. Drives the Price Book used for Quotes on this Opportunity.</description>
        <inlineHelpText>The Pricing Group for this Opportunity and all Quotes created for it. Drives the Price Book used for Quotes on this Opportunity.</inlineHelpText>
        <label>Pricing Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Pathfinder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PS_CPQ_Primary_Quote_Status__c</fullName>
        <description>Current Status of the Primary Quote on this Opportunity.</description>
        <formula>TEXT( SBQQ__PrimaryQuote__r.SBQQ__Status__c )</formula>
        <inlineHelpText>Current Status of the Primary Quote on this Opportunity.</inlineHelpText>
        <label>Primary Quote Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Copado_Billing_Entity__c</fullName>
        <formula>TEXT(Account.PS_Copado_Billing_Entity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copado Billing Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Uplift__c</fullName>
        <description>Uplift value is populated on Quote Line level for Subscription Products</description>
        <label>Uplift (%)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the partner that provided us the lead or helped us co-sell the opportunity.</inlineHelpText>
        <label>Lead Source Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Channel Partner / Reseller, Partner</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Opportunities</relationshipLabel>
        <relationshipName>PartnerOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Channel_Account__c</fullName>
        <formula>IF( Partner_Channel_is_Other__c  = false,Partner_Account__r.Name ,&apos;Other&apos;)</formula>
        <label>Partner Channel Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Channel_is_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Channel is &quot;Other&quot;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Lead_Implementation_Partner__c</fullName>
        <formula>Implementation_Partner__r.Partner_Lead__r.FirstName  &amp; &apos; &apos;  &amp; Implementation_Partner__r.Partner_Lead__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Lead(Implementation Partner)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Lead_Partner_Account__c</fullName>
        <formula>Partner_Account__r.Partner_Lead__r.FirstName  &amp; &apos; &apos;  &amp; Partner_Account__r.Partner_Lead__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Lead(Partner Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Ultimate_Parent__c</fullName>
        <formula>Partner_Account__r.Ultimate_Parent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Ultimate Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <description>This Field is created as part of Qentinel data Migration</description>
        <label>Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pipeline_Channel__c</fullName>
        <formula>IF(RecordType.DeveloperName = &apos;Expansion&apos; || RecordType.DeveloperName = &apos;Renewal&apos;,&apos;Customer&apos;,
IF(RecordType.DeveloperName  &lt;&gt;  &apos;Renewal&apos;  &amp;&amp; ISPICKVAL(LeadSource, &apos;SDR Outbound&apos;),&apos;SDR Outbound&apos;,IF(RecordType.DeveloperName  &lt;&gt;  &apos;Renewal&apos;  &amp;&amp; NOT(ISBLANK( BDR_Owner__c )),&apos;BDR&apos;,IF(RecordType.DeveloperName  &lt;&gt;  &apos;Renewal&apos;  &amp;&amp; NOT(ISBLANK( Partner_Account__c )),&apos;Partner&apos;,IF(RecordType.DeveloperName &lt;&gt;  &apos;Renewal&apos; &amp;&amp; NOT(ISBLANK(Alliances_Owner__c)),&apos;Partner&apos;,IF(RecordType.DeveloperName  &lt;&gt;  &apos;Renewal&apos;  &amp;&amp; ISPICKVAL(LeadSource, &apos;AE Outbound&apos;),&apos;Sales&apos;,IF( NOT(ISPICKVAL(LeadSource, &apos;Copado&apos;)) &amp;&amp; NOT(ISPICKVAL(LeadSource, &apos;AE Outbound&apos;)) &amp;&amp; NOT(ISPICKVAL(LeadSource, &apos;CSM Outbound&apos;)) &amp;&amp; NOT(ISPICKVAL(LeadSource, &apos;Partner Outbound&apos;)),&apos;Marketing&apos;,&apos;&apos;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pipeline Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pipeline__c</fullName>
        <description>This field is created as part of Qentinal Data Migration</description>
        <label>Pipeline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PoC_Completion_Date__c</fullName>
        <inlineHelpText>Date by which the PoC will be completed</inlineHelpText>
        <label>PoC Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PoC_Feedback_Details__c</fullName>
        <label>PoC Feedback Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PoC_Feedback_Expected__c</fullName>
        <inlineHelpText>Date by which PoC feedback is expected</inlineHelpText>
        <label>PoC Feedback Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PoC_Feedback_Received__c</fullName>
        <label>PoC Feedback Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PoC_Plan__c</fullName>
        <inlineHelpText>Plan for proof of concept to validate Copado</inlineHelpText>
        <label>PoC Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PoC_Start_Date__c</fullName>
        <label>PoC Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Potential_ROI__c</fullName>
        <label>Potential ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prepaid__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the opportunity is a multi-year deal paid upfront</inlineHelpText>
        <label>Prepaid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Competitor__c</fullName>
        <description>This is the primary competitor that we are facing in this opportunity</description>
        <inlineHelpText>This is the primary competitor that we are facing in this opportunity</inlineHelpText>
        <label>Primary Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AcelQ</fullName>
                </value>
                <value>
                    <fullName>Amplify DX</fullName>
                </value>
                <value>
                    <fullName>AutoRabit</fullName>
                </value>
                <value>
                    <fullName>Blue Canvas</fullName>
                </value>
                <value>
                    <fullName>Copado Essentials (ClickDeploy)</fullName>
                </value>
                <value>
                    <fullName>DevOps Center</fullName>
                </value>
                <value>
                    <fullName>Eggplant</fullName>
                </value>
                <value>
                    <fullName>Flosum</fullName>
                </value>
                <value>
                    <fullName>Gearset</fullName>
                </value>
                <value>
                    <fullName>Home Grown</fullName>
                </value>
                <value>
                    <fullName>Leapwork</fullName>
                </value>
                <value>
                    <fullName>Metazoa</fullName>
                </value>
                <value>
                    <fullName>Metazoa Snapshot</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Prodly</fullName>
                </value>
                <value>
                    <fullName>Provar</fullName>
                </value>
                <value>
                    <fullName>Ranorex</fullName>
                </value>
                <value>
                    <fullName>Robot Framework</fullName>
                </value>
                <value>
                    <fullName>Salesforce DX</fullName>
                </value>
                <value>
                    <fullName>Saucelabs</fullName>
                </value>
                <value>
                    <fullName>Selenium</fullName>
                </value>
                <value>
                    <fullName>Smartbear</fullName>
                </value>
                <value>
                    <fullName>Tricentis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products_Professional_Services__c</fullName>
        <inlineHelpText>Roll-Up Summary: Count of Opportunity Products related to this Opportunity where Engagement Type = Professional Services</inlineHelpText>
        <label>Products: Professional Services</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Engagement_Type__c</field>
            <operation>equals</operation>
            <value>Professional Services</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Products_Program_Architect__c</fullName>
        <inlineHelpText>Roll-Up Summary: Count of Opportunity Products related to this Opportunity where Engagement Type = Program Architect</inlineHelpText>
        <label>Products: Program Architect</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Engagement_Type__c</field>
            <operation>equals</operation>
            <value>Program Architect</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Products_Strategic_Services__c</fullName>
        <inlineHelpText>Roll-Up Summary: Count of Opportunity Products related to this Opportunity where Engagement Type = Strategic Services</inlineHelpText>
        <label>Products: Strategic Services</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Engagement_Type__c</field>
            <operation>equals</operation>
            <value>Strategic Services</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Duration__c</fullName>
        <formula>Project_End_Date__c - Project_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <displayFormat>{YYYY}{MM}{000}</displayFormat>
        <label>Project ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Project_Kick_off_Date__c</fullName>
        <formula>CloseDate +7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field: Close Date +7. Used for mapping through to the Mission Control Project</inlineHelpText>
        <label>Project Kick-off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>amc__Project__c</referenceTo>
        <relationshipLabel>Opportunities (Project)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal_Done_Date__c</fullName>
        <description>This Field is created as part of Qentinel data Migration</description>
        <label>Proposal Done Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Push_Counter__c</fullName>
        <description>This field tracks many times an Opportunity has been pushed from month to month</description>
        <inlineHelpText>This field tracks many times an Opportunity has been pushed from month to month</inlineHelpText>
        <label>Push Counter</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota_Credit__c</fullName>
        <description>Requested via US-0030343</description>
        <label>Quota Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_ACV__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_End_Date__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.SBQQ__EndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Start_Date__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.SBQQ__StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Term_in_Months__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.PS_CPQ_Term_in_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Term in Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewable_Product_Discount__c</fullName>
        <label>Renewable Product Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewable_Product_Discounts__c</fullName>
        <formula>1 - SBQQ__PrimaryQuote__r.Total_Renewable_Product_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewable Product Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewal_ACV__c</fullName>
        <label>Renewal ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Due_Date__c</fullName>
        <label>Renewal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reportable_ACV__c</fullName>
        <description>If no Quotes have been created for this Opportunity yet, this is equal to the manually-entered Amount. Once a Primary Quote is created for this Opportunity, this equals the 1st Year ACV.</description>
        <formula>IF(
ISBLANK(SBQQ__PrimaryQuote__c)=TRUE,
IF(
X1st_Year_ACV_only__c=0,
Amount,
X1st_Year_ACV_only__c
),
X1st_Year_ACV_only__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If no Quotes have been created for this Opportunity yet, this is equal to the manually-entered Amount. Once a Primary Quote is created for this Opportunity, this equals the 1st Year ACV.</inlineHelpText>
        <label>Reportable ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SAL_Acceptance_Age__c</fullName>
        <formula>SAL_Acceptance_Date__c -  SQL_Transfer_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SQL Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAL_Acceptance_Date__c</fullName>
        <label>SAL Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAL_Age__c</fullName>
        <description>Salesforce Age to see how long it takes to close a deal.</description>
        <formula>IF(IsClosed = False, TODAY() - SAL_Acceptance_Date__c,  CloseDate - SAL_Acceptance_Date__c)</formula>
        <inlineHelpText>Salesforce Age to see how long it takes to close a deal.</inlineHelpText>
        <label>SAL Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAL_Forecast_Date__c</fullName>
        <label>SAL Forecast Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the relationship to your Amended Contract.</description>
        <inlineHelpText>Lookup to your Amended Contract.</inlineHelpText>
        <label>Amended Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Amendment Opportunities</relationshipLabel>
        <relationshipName>AmendmentOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag used to kick off automatic asset and subscription conversion.</description>
        <inlineHelpText>Salesforce CPQ uses this field to automatically convert assets and subscriptions.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CreateContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to create Contracted Prices without creating a Contract.</description>
        <inlineHelpText>Select this checkbox to create Contracted Prices without creating a Contract.</inlineHelpText>
        <label>Create Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderGroupID__c</fullName>
        <description>The unique identifier for the Amend:Re-Quote transaction, which is the original primary quote&apos;s ID. This is not a reference.</description>
        <inlineHelpText>The unique identifier for the Amend:Re-Quote transaction, which is the original primary quote&apos;s ID.</inlineHelpText>
        <label>Order Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag that drives automatic order creation.</description>
        <inlineHelpText>Select this checkbox to automatically create an order from the primary quote.</inlineHelpText>
        <label>Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to primary quote on this opportunity.</description>
        <inlineHelpText>Salesforce CPQ uses this to point to the primary quote on this opportunity.</inlineHelpText>
        <label>Primary Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>SBQQ__Quote__c.SBQQ__Opportunity2__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>PrimaryOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotePricebookId__c</fullName>
        <description>Custom pricebook ID field that updates the standard Pricebook2Id field. Use to automatically drive pricebook selection from workflow rules.</description>
        <label>Quote Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this opportunity is a renewal opportunity.</description>
        <inlineHelpText>Indicates this opportunity is a renewal opportunity.</inlineHelpText>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract being renewed by this renewal opportunity. In case opportunity rolls up several contracts this points at the master contract.</description>
        <inlineHelpText>Contract being renewed by this renewal opportunity. If the several contracts roll up to this opportunity, this points at the master contract.</inlineHelpText>
        <label>Renewed Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Opportunities</relationshipLabel>
        <relationshipName>RenewalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SE_Confidence_Level_Detail__c</fullName>
        <inlineHelpText>Use this field to detail your answer regarding your confidence level in this being a deal Copado can win.</inlineHelpText>
        <label>SE Confidence Level Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SE_Confidence_Level__c</fullName>
        <label>SE Confidence Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Confidence</fullName>
                </value>
                <value>
                    <fullName>Low Confidence</fullName>
                </value>
                <value>
                    <fullName>High Confidence</fullName>
                </value>
                <value>
                    <fullName>Concerned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SE_Hours_Invested__c</fullName>
        <label>SE Hours Invested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SE_Lost_Reason_Detail__c</fullName>
        <inlineHelpText>The Sales Engineer&apos;s perspective on why this deal was lost.</inlineHelpText>
        <label>SE Lost Reason Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SOW_Completed_On__c</fullName>
        <label>SOW Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SOW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOW Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SQL_Transfer_Date__c</fullName>
        <label>SQL Transfer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SRB_Month__c</fullName>
        <inlineHelpText>The first day of the month the contract start date falls on.</inlineHelpText>
        <label>Starting Copado AOV Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SRB__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Starting Copado AOV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_AE_Vertical__c</fullName>
        <formula>Owner.Vertical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales AE Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person assigned to opportunity to support.</inlineHelpText>
        <label>Sales Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce Org</label>
        <referenceTo>Salesforce_Org__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scoping_1__c</fullName>
        <description>Name of whoever is responsible for scoping.</description>
        <label>Scoping 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scoping_2__c</fullName>
        <label>Scoping 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scoping_3__c</fullName>
        <label>Scoping 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>